Removed redundant files, created API calls for commits

--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,6 @@ sketch
 .ionide
 
 # End of https://www.toptal.com/developers/gitignore/api/react,visualstudiocode
+
+### GitLab API Token
+tokens.tsx
