--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "react-test-renderer": "^16.13.1",
     "recharts": "^2.1.2",
     "typescript": "^4.4.2",
     "web-vitals": "^1.1.2"
@@ -40,5 +41,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-test-renderer": "^17.0.1"
   }
 }
