--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
-    "@testing-library/user-event": "^12.8.3",
     "@types/jest": "^26.0.24",
     "@types/node": "^12.20.24",
     "@types/react": "^17.0.20",
@@ -44,6 +43,8 @@
     ]
   },
   "devDependencies": {
+    "@testing-library/dom": "^8.6.0",
+    "@testing-library/user-event": "^12.8.3",
     "@types/react-test-renderer": "^17.0.1"
   }
 }
